CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

13 December 2007
+ File - makeThumbnail returns the dimensions of the new thumbnail and
         not the limits

12 December 2007
+ Patch #1821914 - Eloi George's addition of a 'last' parameter for
  DBPager.
+ Patch #1821701 - Removed invalid css overflow properties.
+ Updated German translation file from Peter Heppner

Version 1.7.1
---------------------------------------------------------------------
10 December 2007
+ Core - small change to getHomeHttp to try and fix IIS error.
+ Database
  o changed groupBy to group_by to match rest of variable names
  o Group by added on distinct columns only if count is not set.
+ DBPager
  o Pager clears order, columns, and group_by before figuring totals.
  o total_column creation needed table to be included.


7 December 2007
+ DBPager
  o New method to determine total rows. If a primary index
    is found, counts on it.
  o New function setTotalColumn to force count column.
+ Database
  o getIndex can now be passed a table name. If it is not,
    assumes current table.
  o addColumn has a distinct parameter again.
  o Transaction support added.

+ Database documentation updated with transation and addColumn
  information.


Version 1.7.0
---------------------------------------------------------------------
5 December 2007
+ Added Office 2007 file types to allowed list.

29 November 2007
+ Added gd check to cropImage in File.php
+ Moved open_window script into window.js to save room in head.
+ Put a GD lib check into setup.


28 November 2007
+ Fixed some leftover test code from DBPager.
+ Added information about using addJoin in Database_Class.txt
+ Small change to Language.txt. Need to pick up dngettext files as
  well.

26 November 2007
+ Changed numbers of dateSelect values to double digit format.
+ Form Generator convert was not reindexing the new form tables.

16 November 2007
+ Database